// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/seed4407/Tarea_distribuidos_2";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";

package grpc;

service NameNode{
    rpc Recepcion_Info (Datos) returns (Recepcion) {}
    rpc ConsultarNombres (Estado_Persona) returns (Lista_Datos_DataNode) {}
}

service DataNode {
    rpc Solicitud_Info_DataNode (Id) returns (Lista_Datos_DataNode) {} //PedirNombre
    rpc RegistrarNombre (Registro) returns (Recepcion) {}
}

//service ONU {
  //rpc ConsultarNombres (Estado_Persona) returns (Recepcion) {}
//}

message Datos {
  string nombre = 1;
  string apellido = 2;
  string estado = 3;
}

message Registro {
  string id = 1;
  string nombre = 2;
  string apellido = 3;
}

message Recepcion{
    string ok = 1;
}

message Datos_DataNode {
  string nombre = 1;
  string apellido = 2;
}

message Lista_Datos_DataNode {
  repeated Datos_DataNode datos = 1;
}

message Id{
    repeated string lista_id = 1;
}

message Estado_Persona{
    string estado = 1;
}

